overflow-x issue resolved

--- a/src/components/CloudBackground/cloudBackground.scss
+++ b/src/components/CloudBackground/cloudBackground.scss
@@ -9,6 +9,8 @@
   position: fixed;
   height: 100%;
   width: 100%;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 .agnightsky_sky {
