--- a/src/index.scss
+++ b/src/index.scss
@@ -30,12 +30,6 @@
   }
 }
 
-@media (max-width: 350px){
-  body {
-    width:350px;
-  }
-}
-
 body {
   margin:0px;
 }
